--- a/example/nav.css
+++ b/example/nav.css
@@ -19,3 +19,5 @@
 .navbar-inverse .navbar-nav>.dropdown>a .caret { border-bottom-color: #007FDA}
 .navbar-inverse .navbar-nav>.dropdown>a:hover .caret { border-bottom-color: #007FDA}
 
+hello world
+rabbit hunter
